# phantun

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.test  README.md
.claude/skills/run-tests/: SKILL.md
.githooks/: pre-commit  pre-push
.github/workflows/: rust.yml
.ralphex/: Dockerfile  config
docker/compare/: Dockerfile.capturer  Dockerfile.phantun  Dockerfile.udp2raw  awg-replay.jsonl  docker-compose.phantun.yml  docker-compose.udp2raw.yml
docs/: packet-compare.html  project_phantun_fork.md  project_phantun_upstream_comparison.md
docs/plans/: 20260403-phantun-stealth-tcp.md  20260403-phantun-test-infrastructure.md  20260404-stealth-performance.md  20260405-hardening.md  20260405-mimic-udp2raw.md  20260413-mimic-udp2raw-sizes.md  20260414-tcb-liveness-and-coalescing.md  20260416-local-compare-harness.md  backlog.md
docs/plans/completed/: 20260403-phantun-stealth-tcp.md  20260403-phantun-test-infrastructure.md  20260404-stealth-performance.md  20260405-hardening.md  20260405-mimic-udp2raw.md  20260416-local-compare-harness.md
docs/runs/: baseline-udp2raw-udp.txt  manifest.json
fake-tcp/: Cargo.toml
fake-tcp/benches/: packet_construction.rs  throughput.rs
fake-tcp/src/: lib.rs  packet.rs  testing.rs
fake-tcp/tests/: config_setup.rs  data_exchange.rs  handshake.rs
fake-tcp/tests/common/: mod.rs
phantun/: Cargo.toml
phantun/src/: lib.rs  mimic.rs  wire.rs  xor.rs
scripts/: capture-baseline.sh  capture-run.sh  extract-replay.py  ralphex-run.sh  run-benchmarks.sh  run-tests.sh  serve-compare.sh
